<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.max.timemaster.profile.detail.ProfileDetailViewModel" />
        <import type="com.max.timemaster.network.LoadApiStatus"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_publish"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:background="@drawable/bg_publish_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:context=".profile.detail.ProfileDetailDialog">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_publish_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:ems="10"
                android:gravity="center"
                android:hint="Name"
                android:text="@={viewModel.edDateName}"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/edit_birthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/edit_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/black_frame"
                android:ems="10"
                android:text="輸入生日"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/button_publish"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@color/black_3f3a3a"
                android:clickable="@{viewModel.status == LoadApiStatus.LOADING ? false : true}"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text='@{viewModel.status != LoadApiStatus.LOADING ? "Publish" : ""}'
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_publish_content" />

            <ProgressBar
                android:id="@+id/progress_publish"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:theme="@style/ProgressThemeDark"
                android:visibility="@{viewModel.status == LoadApiStatus.LOADING ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/button_publish"
                app:layout_constraintEnd_toEndOf="@+id/button_publish"
                app:layout_constraintStart_toStartOf="@+id/button_publish"
                app:layout_constraintTop_toTopOf="@+id/button_publish" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_profile_color"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5"
                tools:itemCount="10"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintBottom_toTopOf="@+id/button_publish" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>