...
                    <!--            app:setupApiStatus="@{viewModel.status}"-->


                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_add_date"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame"
                    android:text="新增對象"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_profile_header" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
...
