<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/icon_calendar"
        android:title="" />

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/icon_catalog"
            android:title=""/>

    <item
            android:id="@+id/navigation_cost"
            android:icon="@drawable/icon_cart"
            android:title=""/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/icon_profile"
            android:title=""/>

</menu>
